--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -18,9 +18,15 @@ jobs:
         uses: actions/setup-node@v4
         with:
           node-version: '20.x'
+      
+      - name: Install Vercel
+        run: npm install vercel
           
-      - name: install depends
+      - name: Install depends
         run: npm ci
         
       - name: Build site
         run: npm run build-prod
+
+      - name: Deploy App
+        run: npx vercel deploy --cwd ./dist --prebuilt --token ${{ secrets.VECELKEY }}
