--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -29,4 +29,4 @@ jobs:
         run: npm run build-prod
 
       - name: Deploy App
-        run: npx vercel deploy --cwd ./dist --prebuilt --token ${{ secrets.VECELKEY }}
+        run: npx vercel deploy --cwd ./dist --prebuilt --name test-project --token ${{ secrets.VECELKEY }}
